// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Components renders Checkbox input correctly 1`] = `
<div
  className="form-group"
>
  
  <input
    className="form-check-input  "
    type="checkbox"
  />
</div>
`;

exports[`Input Components renders Select input correctly 1`] = `
<div
  className="mb-3 form-floating form-group"
>
  <div
    className="form-floating"
  >
    <select
      className="  form-select"
    />
    <label>
      
    </label>
  </div>
</div>
`;

exports[`Input Components renders Text input correctly 1`] = `
<div
  className="mb-3 form-floating"
>
  <input
    className="form-control form-control"
    onChange={[Function]}
    placeholder=" "
    required={false}
    type="text"
    value=""
  />
  <label>
    
  </label>
</div>
`;

exports[`Input Components renders Textarea input correctly 1`] = `
<div
  className="mb-3 form-group form-floating"
>
  <textarea
    className="form-control  "
  />
  <label>
    
  </label>
</div>
`;
